--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,17 +4,17 @@ on:
   pull_request:
     branches:
       - '*'
-
+      
 jobs:
   ktlint:
     name: ktlint_check
-    runs-on: ubuntu-latest
-    
+    runs-on: ubuntu-latest  
+
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v2
         
-      - name: install JDK 17
+      - name: Install JDK 17
         uses: actions/setup-java@v2
         with:
           java-version: '17'
@@ -27,11 +27,14 @@ jobs:
         
   test:
     name: test_code
-    runs-on: ubuntu-latest
-    needs: ktlint
+    runs-on: ubuntu-latest  
+    needs: ktlint  
 
     steps:
-      - name: install JDK 17
+      - name: Checkout code 
+        uses: actions/checkout@v2
+        
+      - name: Install JDK 17
         uses: actions/setup-java@v2
         with:
           java-version: '17'
@@ -39,7 +42,5 @@ jobs:
       - name: Install dependencies
         run: ./gradlew dependencies
 
-      - name: Run Test
+      - name: Run Tests  # 단계 이름 수정
         run: ./gradlew test
-        
-  
