--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
       
 jobs:
   ktlint:
-    name: ktlint_check
+    name: ktlint_and_test
     runs-on: ubuntu-latest  
 
     steps:
@@ -24,23 +24,6 @@ jobs:
         
       - name: Run ktlint
         run: ./gradlew ktlintCheck
-        
-  test:
-    name: test_code
-    runs-on: ubuntu-latest  
-    needs: ktlint  
 
-    steps:
-      - name: Checkout code 
-        uses: actions/checkout@v2
-        
-      - name: Install JDK 17
-        uses: actions/setup-java@v2
-        with:
-          java-version: '17'
-          
-      - name: Install dependencies
-        run: ./gradlew dependencies
-
-      - name: Run Tests  # 단계 이름 수정
+      - name: Run Tests 
         run: ./gradlew test
